# Linux-Lossless-Frame-Generation

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: ci.yml
src/: capture.cpp  capture.hpp  log.hpp  main.cpp  options.hpp  portal.cpp  portal.hpp  renderer.cpp  renderer.hpp
src/core/: cadence.cpp  cadence.hpp  pacer.cpp  pacer.hpp
src/shaders/: blend.comp  blend.comp.spv.h  blend_comp_spv.h
src/vk/: context.cpp  context.hpp  dmabuf_import.cpp  dmabuf_import.hpp  frame_pool.cpp  frame_pool.hpp  interpolate.cpp  interpolate.hpp
tests/: test_cadence.cpp  test_pacer.cpp
tools/: gen_shaders.sh
